--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "illuminate/events": "5.6.*",
         "illuminate/filesystem": "5.6.*",
         "symfony/var-dumper": "~4.0",
-        "illuminate/config": "5.6.*"
+        "illuminate/config": "5.6.*",
+        "symfony/dotenv": "^4.2@dev"
     },
     "license": "MIT",
     "authors": [
@@ -21,9 +22,17 @@
     "autoload": {
         "psr-4": {
             "Januar\\LaravelOutside\\": "src/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "require-dev": {
         "mockery/mockery": "^1.0@dev"
+    },
+    "scripts": {
+        "post-package-install": [
+            "@php -r \"file_exists('.env') || copy('vendor/januar/laravel-outside/.env.example', '.env');\""
+        ]
     }
 }
