--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "illuminate/filesystem": "5.6.*",
         "symfony/var-dumper": "~4.0",
         "illuminate/config": "5.6.*",
-        "symfony/dotenv": "^4.2@dev"
+        "symfony/dotenv": "~4.1"
     },
     "minimum-stability": "dev",
     "autoload": {
