--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/dotenv": "~4.1"
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "classmap": [
             "database/seeds"
@@ -36,7 +37,7 @@
         "mockery/mockery": "^1.0@dev"
     },
     "scripts": {
-        "post-package-install": [
+        "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('vendor/januar/laravel-outside/.env.example', '.env');\""
         ]
     }
