--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('vendor/januar/laravel-outside/.env.example', '.env');\""
         ]
-    }
+    },
+    "bin": [
+        "bin/js"
+    ]
 }
