--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     ],
     "homepage": "https://github.com/januar/laravel-outside",
     "require": {
-        "illuminate/database": "5.6.*",
-        "illuminate/console": "5.6.*",
-        "illuminate/events": "5.6.*",
-        "illuminate/filesystem": "5.6.*",
+        "illuminate/database": "5.8.*",
+        "illuminate/console": "5.8.*",
+        "illuminate/events": "5.8.*",
+        "illuminate/filesystem": "5.8.*",
         "symfony/var-dumper": "~4.0",
-        "illuminate/config": "5.6.*",
-        "symfony/dotenv": "~4.1",
-        "mockery/mockery": "^1.0"
+        "illuminate/config": "5.8.*",
+        "mockery/mockery": "^1.0",
+        "vlucas/phpdotenv": "^3.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
