--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,15 @@
         "symfony/var-dumper": "~4.0",
         "illuminate/config": "5.8.*",
         "mockery/mockery": "^1.0",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "illuminate/support": "5.8.*",
+        "ext-json": "*"
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Januar\\LaravelOutside\\": "src/"
+            "LaravelOutside\\": "src/"
         },
         "files": [
             "src/helpers.php"
